--- a/index.html
+++ b/index.html
@@ -115,30 +115,26 @@
     <section id="about">
         <div class="section-content">
             <h2>About Me</h2>
-3 weeks ago
 
-Update index.html
             <p>I'm a <b>cyber security </b>expert and technology enthusiast who is passionate about helping organizations protect their data and create secure online environments. I'm driven by the desire to put technology to work for the greater good and empower individuals and businesses to benefit from the digital revolution. With over 7 years of experience in the field, I'm dedicated to staying up to date with the latest trends and innovations in the <a href="https://techtrainer20.github.io/git_con2/" traget="_target">cyber security </a> landscape. I'm also committed to helping others learn more about the importance of online security and how to stay safe online..</p>
 last month
 
 Add files via upload
         </div>
     </section>
-
     <section id="education">
         <div class="section-content">
             <h2>Education</h2>
-2 weeks ago
 
-Update index.html
+
+
             <p>Anna University  - MCA</p>
-last month
 
-Add files via upload
+
+
             
             
-        </div>
-    </section>
+        </div>    </section>
 
     <section id="skills">
         <div class="section-content">
